 - Function "values_to_steps": convert values to index of unique, sorted values
datamodel
 - Fix reading JSON-headed ASCII in numpy 1.4, 1.5
 - New function resample to change the time cadence of a SpaceData with windowMean
 - SpaceData gained methods for toCDF, toHDF, and toJSONheadedASCII
 - SpaceData keys can be multiple called, see __getitem__
empiricals
 - New function getSolarRotation, returns Carrington or Bartels number
 - New model in getPlasmaPause,  RT1970 -- Rycroft et al 1970
 - New function getSolarProtonSpectra, returns a fluence spectra for SEP events
plot
 - Packages in plot are imported on import of plot module
 - Addition of dual_half_circle() to overlay a light/dark "Earth"
 - Addition of simpleSpectrogram() in spacepy.plot.spectrogram
 - Addition of Carrington/Bartel plotting for 1D series (in spacepy.plot.carrington)
 - Updated smartTimeTicks, applySmartTimeTicks and added set_target (from PyBATS)
 - SpacePy style sheets added. Autoimported with plot, but with functionality to change style
 - Fix utils.collapse_vertical when called with sequences other than lists
 - Update to utils.timestamp adding more customization
pybats
 - Updated docstrings across all modules.
 - rim.py updated to be consistent with other pybats modules.
 - many bugfixes
 - Unified BATS-R-US calculation of number density and composition.
 - New class for magnetometer grid files: MagGridFile
 - New function for automatic latex label creation.
 - Updated Mag and MagFile objects for forward/backward compatibility.
 - IdlBin class renamed IdlFile; can read binary or ascii SWMF-IDL files.
 - Moved core plotting routines (set_target, smart_timeticks, apply_smart_timeticks) to plot.utils
pycdf
 - On OSX, search more paths for the CDF library
 - CDF.clone() now returns the new variable
 - Fix re-import after failure to find the CDF library, can now try the import
   again without restarting the Python interpreter